--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest test.py
+  - coverage run -m unittest discover
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
