--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
 python:
-  - "3.6"
   - "3.7"
   - "3.8"
 install:
   - pip install -r requirements.txt
 script:
-  - coverage run -m unittest discover
+  - coverage run -m pytest test.py
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - coverage xml
+  - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r coverage.xml
