format the code with black & optimize queries
Signed-off-by: mhdzumair <mhdzumair@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 venv/
 .idea/
 *.pyc
+.vscode
 
 # ignore coverage files
 .coverage
 coverage.xml
 
+# ignore the npm packages
 node_modules/
 package-lock.json
